# adi-mpi

./: .gitignore  LICENSE  README.md
hw1/: CMakeLists.txt  main.c  matrix.c  matrix.h  measurements.c  measurements.h  results.txt
hw2/: CMakeLists.txt  main.cpp  matrix.cpp  matrix.h  results.txt  vectors_summarizing.cpp  vectors_summarizing.h
hw3/: CMakeLists.txt  main.cpp
hw4/: CMakeLists.txt  main.c
spline/: CMakeLists.txt  main.c  main.cpp  matrix.c  matrix.h  matrix_multiply.c  matrix_multiply.h
src/: CMakeLists.txt  main.cpp
